# memories-calendar

./: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  angular.json  commitizen.config.js  commitzen.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: native.yml  tauri.yml  web.yml
bindings/: date-quantitative-data.type.ts  file-data.type.ts  file-type.type.ts
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  utils.rs
src-tauri/src/commands/: get_event_filenames.rs  get_event_files_data.rs  get_events.rs  mod.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
src/app/components/: index.ts  memories-calendar.component.ts
src/app/components/backdrop/: backdrop.component.html  backdrop.component.scss  backdrop.component.ts
src/app/components/file-card/: file-card.component.html  file-card.component.scss  file-card.component.ts
src/app/components/files-carousel-modal/: files-carousel-modal.component.html  files-carousel-modal.component.scss  files-carousel-modal.component.ts
src/app/components/get-events-data-modal/: get-events-data-modal.component.html  get-events-data-modal.component.scss  get-events-data-modal.component.ts
src/app/components/image/: image.component.html  image.component.scss  (+1 more)
src/app/services/: command.service.ts  event-builder.service.ts  index.ts  store.service.ts
src/app/validators/: current-directory.validator.ts  file-path.validator.ts  index.ts
(+15 files in other folders)
