[package]
name = "memories-calendar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
simple_logger = "4.3.3"
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
walkdir = "2.5.0"
ts-rs = { version = "8.1.0", features = ["chrono-impl"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
